自定义分表策略

--- a/sharding-jdbc-shard-table/src/main/resources/application.properties
+++ b/sharding-jdbc-shard-table/src/main/resources/application.properties
@@ -14,11 +14,15 @@ spring.shardingsphere.datasource.master.password=123456
 
 
 
-spring.shardingsphere.sharding.tables.user.actual-data-nodes=master.user_${0..3}
 
+spring.shardingsphere.sharding.tables.user.actual-data-nodes=master.user_${0..3}
 # inline 表达式
 spring.shardingsphere.sharding.tables.user.table-strategy.inline.sharding-column=id
 spring.shardingsphere.sharding.tables.user.table-strategy.inline.algorithm-expression=user_${id.longValue() % 4}
+
+spring.shardingsphere.sharding.tables.order_info.actual-data-nodes=master.order_info_${0..1}
+spring.shardingsphere.sharding.tables.order_info.table-strategy.standard.precise-algorithm-class-name=com.gll.MyOrderAlgorithm
+spring.shardingsphere.sharding.tables.order_info.table-strategy.standard.sharding-column=user_id
 
 
 # 显示SQL
